[Misc] Migrate tests to JUnit5 + fix SonarQube-reported issues